--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
+    "@mui/x-date-pickers": "^5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.5",
     "force": "^0.0.3",
     "mdb-react-ui-kit": "^4.2.0",
+    "moment": "^2.29.4",
     "rc-footer": "^0.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.0.5",
     "web-vitals": "^2.1.4",
