--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.5",
     "force": "^0.0.3",
+    "js-cookie": "^3.0.1",
+    "lodash.debounce": "^4.0.8",
     "mdb-react-ui-kit": "^4.2.0",
     "moment": "^2.29.4",
     "rc-footer": "^0.6.6",
     "react": "^18.2.0",
+    "react-bubbly-transitions": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.0.5",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
