--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@lottiefiles/lottie-player": "^1.6.0",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/x-date-pickers": "^5.0.4",
@@ -22,6 +23,8 @@
     "react": "^18.2.0",
     "react-bubbly-transitions": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
+    "react-lottie-player": "^1.5.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
