--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scrollbar": "^0.5.6",
     "react-slideshow-image": "^4.0.5",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
